# sumoltaneous-equations

./: .gitignore  README.md
cad/: BALLAST.SLDPRT  MOTOR.SLDASM  SUMOBOT.SLDASM
calc/: motor.m  motor_driver.m  torque.m
calculations/: README.md  drive-model.md  kinematic-model.md  power-supply.md  state-space.md  strategy.md
docs/: README.md
software/: CMakeLists.txt  README.md
software/RobotControl/src/: main.cpp
software/include/: TCPClient.hpp
software/src/: README.md
src/: main.cpp
sumoltaneous-equations-dev/: CMakeSettings.json  DifferentialRobot.hpp  DistanceSensor.hpp  Drive.hpp  EdgeAvoidance.hpp  IRSensor.hpp  Motor.hpp  OpponentTracking.hpp  Pair.hpp  README.md  ToggleButton.hpp  sumoltaneous-equations-dev.ino
sumoltaneous-equations-inventor/: AI3MSPRO_Body.3mf  Backp.ipt  Bottomp.ipt  CHASSIS.3MF  CHASSIS.SLDPRT  Final-ass.iam  Frontp.ipt  JGA25-370-bracket-standoff.ipt  JGA25-370-bracket.ipt  JGA25-370-bracket.step  JGA25-370-mount.ipt  JGA25-370.ipt  JGA25-370.step  MH-B-ir-sensor.step  Motor-bracket.ipt  Motor-mountp.ipt  README.md  Rampp.ipt  Topp.ipt  WHEEL.SLDPRT  body-shape.ipt  chassis-parts.ipt  chassis.ipt  example-chassis.ipt  floor.ipt  gear-train-sketch.ipt  hc-sr04-bracket.ipt  hc-sr04-sensor-placement-sketch.ipt  motor-cage.ipt  panel.ipt  ramp.ipt  scoop.ipt  sumoltaneous-equations.iam  v2.3mf  v3.3mf  (+2 more)
sumoltaneous-equations-inventor-sheet-metal/: Bottomp.ipt  Frontp.ipt  Rampp.ipt  Spacer.ipt  Topp.ipt  body-shape.ipt  hc-sr04-bracket.ipt  motor-cage.ipt  spur-gear-1m-15t.ipt  spur-gear-1m-15t.step  spur-gear-1m-60t.ipt
(+10 files in other folders)
