# CMakeList.txt : CMake project for sumobot, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("sumobot")

# Add source to this project's executable.
# add_executable (sumobot "sumobot.cpp" "sumobot.h")

# TODO: Add tests and install targets if needed.
